[workspace]
members = ["*"]
exclude = ["target", "template"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
arrayvec = "0.7"
bimap = "0.6.2"
itertools = "0.10"
nom = "7"
parse-display = "0.6"
rayon = "1.6"
regex = "1.10"
smallvec = "1"

util.path = "util"

[profile.release]
overflow-checks = true
