[workspace]
members = ["aoc"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
arrayvec = "0.7"
bimap = "0.6"
indexmap = "2.7"
indoc = "2"
itertools = "0.10"
nom = "7"
parse-display = "0.10"
rand = "0.8.5"
rayon = "1.10"
regex = "1.11"
smallvec = "1"

[profile.release]
overflow-checks = true
debug = true
