[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arrayvec = "0.7"
bimap = "0.6"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
copypasta = "0.10.2"
criterion = "0.5.1"
dirs = "5.0.1"
indexmap = "2.7"
indoc = "2"
itertools = "0.10"
nom = "8"
parse-display = "0.10"
rand = "0.9.2"
rayon = "1.10"
regex = "1.11"
reqwest = { version = "0.12", features = ["cookies"] }
smallvec = "1"
tokio = { version = "1", features = ["macros", "rt"] }
url = "2.5"

[profile.release]
overflow-checks = true
debug = true
