[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
copypasta = "0.10.0"
criterion = "0.5.1"

day01.path = "../01"
day02.path = "../02"
day03.path = "../03"
day04.path = "../04"
day05.path = "../05"
day06.path = "../06"
day07.path = "../07"
day08.path = "../08"
day09.path = "../09"
day10.path = "../10"
